@@ -57,6 +57,6 @@
 #include "compat/mkstemps.c"
 #endif
 
-void empty_func_to_make_ansi_compiler_happy(void) {
+void empty_func_to_make_ansi_compiler_happy() {
 }
 
