@@ -67,4 +67,7 @@
 /* mkstemps */
 @DEF__MKSTEMPS@
 
+
+void empty_func_to_make_ansi_compiler_happy(void);
+
 #endif /* _PMK_COMPAT_H_ */
